[project]
name = "newtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "torch>=2.12.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
